# yolo_pipeline

./: hello.py  pyproject.toml  run_pipeline.py  temp.py
interfaces/: ingest_interface.py  transformer_interface.py
utils/: utils.py
valves/: agumentor.py  ingest_data.py  transformers.py
